[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "selenium>=4.29.0",
    "telegram>=0.0.1",
    "webdriver-manager>=4.0.2",
]
